Fix page not stretching all the way to bottom
Page would not stretch all the way to the bottom
in fullscreen because I did not tell the container
to use all of the view height.

--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ ul {
     display: grid;
     grid-template-columns: minmax(215px, 1fr) 4fr;
     grid-template-rows: auto 1fr;
+    min-height: 100vh;
 }
 
 
@@ -351,10 +352,6 @@ p {
   gap: 1em;
   margin-left: 1em;
 
-}
-
-.projects .card:first-child{
-  justify-content: start;
 }
 
 .right-column {
